# buyers-agent

./: .gitignore  .newt.yml  README.md  environment.py  pdf_chat.py  pdf_loader.py  poetry.toml  prompt.md  pyproject.toml  test_langchain.py
prompts/: choose_relevant_files.md  read_home_inspection.md
src/: environment.py  pdf_chat.py  run_evals.py
src/chat/: chat_engine.py  printer.py
src/evals/: closing_disclosure.py
src/parsing/: choose_relevant_files.py  claude_parse_pdf.py  llama_parse_pdf.py  pdf_loader.py
src/scrapers/: crawler.py  intelligent_crawler.py  website.py
src/utils/: directory_info.py  files.py
src/vector_stores/: local_storage.py  pinecone.py
summaries/: connie_home_inspection.md  greer_home_inspection.md
