[tool.poetry]
name = "buyers-agent"
version = "0.1.0"
description = "Buyers Agent Project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
llama-index = "^0.11.20"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
