[tool.poetry]
name = "buyers-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
llama-index = "^0.11.20"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
llama-index-embeddings-huggingface = "^0.3.1"
pinecone = "^5.3.1"
pinecone-client = "^5.0.1"
llama-index-vector-stores-pinecone = "^0.2.1"
braintrust = "^0.0.166"
autoevals = "^0.0.99"
llama-parse = "^0.5.12"
llama-index-llms-openai = "^0.2.16"
llama-index-embeddings-openai = "^0.2.5"
rich = "^13.9.3"
urllib3 = "1.26.15"
llama-index-readers-web = "^0.2.4"
firecrawl-py = "^1.4.0"


[tool.poetry.group.dev.dependencies]
einops = "^0.8.0"
datasets = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
